reading and writing complete

--- a/Project Proposal(r&w,HO).html
+++ b/Project Proposal(r&w,HO).html
@@ -104,12 +104,12 @@
 <div class="bodyprojectproposal_container containerwithsidebar">
 <div class="bodyprojectproposal_container_title">
 <h1>Project Proposal</h1>
-<h4>Reading ang Writing, January 21 2021 : Thursday</h4>
+<h4>Reading and Writing, January 21 2021 : Thursday</h4>
 <h6>Ana Marie Altarejos</h6>
 <h6></h6>
 </div>
 <div class="bodyprojectproposal_container_textarea">
-<div class="bodyposistionpaper_container_textarea_introduction" id="introduction">
+<div class="bodyprojectproposal_container_textarea_introduction" id="introduction">
 <h2>Introduction</h2>    
 <p>
     A project proposal is a document that describes a proposed project and its purpose, 
@@ -125,7 +125,7 @@
     challenge when it has to be presented in a framework
 </p>
 </div>
-<div class="bodyposistionpaper_container_textarea_Whyitisimportant" id="Whyitisimportant">
+<div class="bodyprojectproposal_container_textarea_Whyitisimportant" id="Whyitisimportant">
 <h2>Why it is important?</h2>
 <p>
     The purpose of a project proposal is to describe services and outcomes from a potential service 
@@ -135,152 +135,105 @@
     as well as set expectations for what delivery would look like.
 </p>
 <p>
-    An academic audience that includes the authors of the readings and others interested in the issue upon which you are focusing.
+    Also The main objective of the project proposal is to get the client to buy into your services. 
+    Thus, project proposals are a great way to secure funding, win new clients, or convince executives to allocate resources to projects.
 </p>
 </div>
-<div class="bodyposistionpaper_container_textarea_compositionofposistionpaper" id="compositionofposistionpaper">
-<h2>Composition of Posistion of Paper</h2>
+<div class="bodyprojectproposal_container_textarea_AnatomyofPropossalpaper" id="AnatomyofProjectproposals">
+<h2>Anatomy of Project proposals</h2>
 <p>
-    You may (or may not) be asked to include a thesis at the beginning and references at the end of your position paper. 
-    However, these three essential parts must always be there: introduction, body, and conclusion.
+    the actual elements of a project proposal differ depending on the project itself, 
+    there are several key elements of a project proposal, including:
 </p>
+<h3>Project Understanding</h3>
 <p>
-    The paper is mainly written by the delegates of a country in a conference to show their position in a specific matter. 
-    The main goal is usually to reason logically and compellingly, hence convincing the audience that your policy is both valid and defensible.
+    A project proposal outlines the purpose and scope of a project. This is helpful before a project takes 
+    place since it ensures both parties agree about what the project itself will include. It states to the 
+    decision-maker or stakeholder that the service provider understands the scope of the project. This helps 
+    establish trust between the parties to facilitate a transactional agreement.
 </p>
-<ul>
-    <li>
-        <h3>Introduction</h3>
-        <p>
-            The introductory part can make the reader or audience either dismissive or interested to know more. Begin with a few opening sentences
-             that capture their attention. You also want to use suspense so that your reader is hooked. Most importantly, however, the introduction 
-             paragraph should inform your reader about the issue you have chosen.
-        </p>
-    </li>
-    <li>
-        <h3>Body</h3>
-        <p>
-            The body of a position paper has three parts: background information, evidence to support your opinion, 
-            and a discussion of both sides of the matter. You need to conduct thorough research and have enough facts to back up your claims. 
-            However, don’t forget to address both sides of the argument.
-        </p>
-        <p>
-            It shows the reader that you were not biased in your considerations and, ultimately, gives you a better shot at convincing them. 
-            Of course, the arguments supporting your position should be more than counterarguments. Also, remember to mention the idea before 
-            the evidence to back it up and then go on to explain that evidence.
-        </p>
-    </li>
-    <li>
-        <h3>Conclusion</h3>
-        <p>
-            A good conclusion provides a summary of your key points and lets the audience in a conference know where you stand. 
-            You can restate your thesis at the beginning of the conclusion, then go on to summarise the key points. Your stand 
-            must always come out clearly before you wrap up. What’s more, you must suggest the way forward at the end.
-        </p>
-    </li>
-</ul>
+<h3>Propose an Estimated Timeline & Budget</h3>
+<p>
+    A project proposal also proposes a timeline and budget for the project. While this document is not a formal contract, 
+    it provides stakeholders enough information about budget, timeline, and outcomes to determine whether or not to move 
+    forward with a project and, if so, to make an informed contractor or vendor decision.
+</p>
+<h3>Set Expectations</h3>
+<p>
+    In addition, a project proposal also sets expectations for the client relationship. This includes having a mutual understanding of deliverables, 
+    timelines, and budget. While the project proposal is not a contractual agreement, it does set a preliminary agreement that the details in the 
+    project proposal will be put into the contract if the project moves forward.
+</p>
+<h3>Inform Project Planning</h3>
+<p>
+    Finally, a project proposal also helps to inform project planning. Once the project is approved, this document will be used to finalize timelines 
+    and budget for the contract as well as to complete resource scheduling.
+</p>
+</div>
+<div class="bodyprojectproposal_container_textarea_Typeofprojectproposals" id="Typeofprojectproposals">
+<h2>Type Of Project proposals</h2>
+<p>
+    A proposal puts the buyer's requirements in a context that favors the seller's products and services, 
+    and educates the buyer about the capabilities of the seller in satisfying their needs. and with that context this is the several type of proposal that might help you to apadt on planning 
+</p>
+<h3>Formally Solicited</h3>
+<p>
+    A formally solicited project proposal is established in response to an official request for a new proposal. 
+    In this case, a Request for Proposal (RFP) document is used to outline client demands and specific needs
+</p>
+<h3>Informally Solicited</h3>
+<p>
+    An informally solicited proposal does not require an RFP. That is, there is no specific document required 
+    to outline customer or audience demands. This is the initial rough starting point when proposing a project’s viability. 
+    The major differentiator between a formal and informal project proposal is the number of details involved in planning. 
+    Informal proposals lack granular project details, such as goals, deliverables, and methods. 
+    An informally solicited project proposal can be understood as a proposal request that is lacking specifics.
+</p>
+<h3>Unsolicited</h3>
+<p>
+    Unsolicited proposals can be the most difficult types to write, as you will have to put extra work in to convince 
+    the audience of the project’s viability. Many times, these proposals require the most research and the most finesse, 
+    as the audience is unaware that the proposal is even coming their way.
+</p>
+<h3>Continuation</h3>
+<p>
+    Continuation project proposals are essentially an update or reminder for ongoing and already approved projects.
+</p>
+<h3>Renewal</h3>
+<p>
+    A renewal project proposal is required when an ongoing project has been terminated or the resources and support 
+    behind such project can no longer be used. This proposal is more about proving that the return on investment 
+    is greater than the money being spent on resources so that the project can begin again.
+</p>
+<h3>Supplemental</h3>
+<p>
+    A supplemental project proposal is required when more resources are required to complete a project 
+    than were originally proposed. The main goal of a supplemental proposal is to prove the value of adding 
+    resources and update the audience with a timeline based on this new plan.
+</p>
+</div>
 
-</div>
-<div class="bodyposistionpaper_container_textarea_Aspectofposistionpaper" id="Aspects">
-<h2>Aspects of Posistion Paper</h2>
-<p>
-    Writers of position papers usually feel strongly about the issues they address, and they strive to
-convince readers to accept their opinions as valid and reasonable. To achieve this end, position
-papers typically include the following features: a well-defined, controversial issue; a clear position
-on the issue; a convincing argument; and a reasonable tone. Furthermore, position papers will often
-attempt to make use of emotional appeals as well as intellectual appeals to sway an audience.
-</p>
-<h3>Well-defined and Conteversial Issue</h3>
-<p>
-    Although the issue addressed in the position
-paper may be complex, it should be carefully defined so that readers understand exactly what is at
-stake and why the issue is important. Moreover, the issue must not be only controversial but also
-arguable. Some issues upon which there is considerable debate are not arguable because they can
-either be.
-</p>
-<h3>Clear Posistion on the Issue</h3>
-<p>
-    A position paper makes explicit the opinion it advocates
-by announcing it directly in a thesis statement, which may appear at any point in the essay. In long,
-complicated essays, the thesis may even be restated several times. Although it should be stated
-emphatically, the thesis can be modified in the course of the argument.
-</p>
-<h3>Convincing argument</h3>
-<p>
-    In debating controversial issues, writers naturally assume that their
-    readers will either disagree with them or be skeptical. Because they seek to build bridges between
-    their own opinions and those of others, writers of position papers typically adopt a tone that will be
-    perceived as reasonable and trustworthy. Even when challenging their reader’s basic assumptions
-    about deeply felt issues, writers try to inspire respect and confidence
-</p>
-</div>
-<div class="bodyposistionpaper_container_textarea_Strategies" id="Strategies">
-<h2>Strategies on Writing an Posistion paper</h2>
-<p>
-    Now, knowing the parts that your essay should have is not enough when you have to write an attractive 
-    and convincing position paper. You should have a few other tricks up your sleeve to guide you in terms 
-    of selecting a topic, developing the argument, conducting research, etc.
-</p>
-<ul>
-    <li>
-        <h3>Focus</h3>
-        <p>
-            on a narrowly defined issue found in at least two of the readings. Use a specific, 
-            clearly stated thesis to introduce the focus. Introduce the issue early in the discussion.
-        </p>
-    </li>
-    <li>
-        <h3>Develop</h3>
-        <p>
-            your argument by defending your claim and showing how it relates to the positions of your sources. 
-            Show the positions of three authors, at least two of which must be from the list below of class readings. 
-            You must refer to all class readings that address the issue upon which you focus. Use clearly 
-            stated reasons and relevant, effective evidence. Reasons should represent sound logic. Evidence may be drawn from the readings, 
-            personal experience, and outside sources such as interviews, surveys, or written sources.
-        </p>
-    </li>
-    <li>
-        <h3>Organize</h3>
-        <p>
-            your paper in a way that effectively conveys information to your readers, is easy to follow, 
-            and presents your position in relation to those of the authors.
-        </p>
-    </li>
-    <li>
-        <h3>Style</h3>
-        <p>
-            Write in a style that is clear, readable, appropriate to audience, and free from distracting errors in spelling, 
-            grammar, and usage.
-        </p>
-    </li>
-</ul>
-</div>
 </div>
 </div>
 
 
-<div class="bodyposistionpaper_activity_section containerwithsidebar" id="activity">
+<div class="bodyprojectproposal_activity_section containerwithsidebar" id="activity">
     <h1>Activity:</h1>
-    <h5>Instruction:</h5>
-   <p>Create an well made and consise Draft of a Posistion Papers </p>
-    </ol>
-   <a href="https://drive.google.com/file/d/1d8ZCraLfJL7WL6RESNAFkygm6P_QVBsA/view?usp=sharing">
-   <button class="bodystress_activity_section_btn"> Submission </button>
-    </a>
+    <p><i>*/No Activity/*</i></p>
+    <p><i>Have a rest you need that</i></p>
 </div>
 </div>
-<div class="bodyposistionpaper_stickyui sidebar">
-        <div class="bodyposistionpaper_stickyui_content">
+<div class="bodyprojectproposal_stickyui sidebar">
+        <div class="bodyprojectproposal_stickyui_content">
         <h1>Topic Outline</h1>
-        <h2>Posistion Paper</h2>
+        <h2>Project proposal</h2>
         <h6>Title</h6>
         <h3>Sections:</h3>
         <ul>
             <li><a href="#introduction">Introduction</a></li>
-            <li><a href="#Purposeofthepaper">Purpose of the Paper</a></li>
-            <li><a href="#compositionofposistionpaper">Composition of Position Paper</a></li>
-            <li><a href="#Aspects">Aspects of Posistion paper</a></li>
-            <li><a href="#Strategies">Strategies on Writing Posistion paper</a></li>
+            <li><a href="#Whyitisimportant">Why it is important?</a></li>
+            <li><a href="#AnatomyofProjectproposals">Anatomy of Project proposals</a></li>
+            <li><a href="#Typeofprojectproposals">Type of Project Proposals</a></li>
             <li><a href="#activity">Activity</a></li>
 
         </ul>
