--- a/ELS_ho.html
+++ b/ELS_ho.html
@@ -55,7 +55,7 @@
         <li><span></span></li>
         <li><a href="#">Reading and Writing</a></li>
         <li><span></span></li>
-        <li><a href="ELS_ho.html">Earth and Life Science</a></li>
+        <li><a href="#">Earth and Life Science</a></li>
         </ul>
     </div>
     <!--dropdown-->
@@ -70,7 +70,7 @@
     <li><span></span></li>
     <li><a href="#">Reading and Writing</a></li>
     <li><span></span></li>
-    <li><a href="#">Earth and Life Science</a></li>
+    <li><a href="ELS_ho.html">Earth and Life Science</a></li>
     </ul>
     <!--dropdown-->
 </div>
@@ -97,72 +97,72 @@
 </nav>
 </header>
 
-<body class="bodyrNwHO"> 
-<div class="bodyrNwHO_title">
-<h1 class="">Reading and Writing</h1>
-<h4>Thursday, Fridayy</h4>
+<body class="bodyelsHO"> 
+<div class="bodyelsHO_title">
+<h1 class="">Earth and Life Science</h1>
+<h4>Thursday, Friday</h4>
 <h4 id="title">Teacher: Ana Marie Altarejos</h4>
 </div>
-<div class="bodyrNwHO_container">
+<div class="bodyelsHO_container">
    
-      <div class="bodyrNwHO_container_content">
+      <div class="bodyelsHO_container_content">
         
-        <div class="bodyrNwHO_container_content_item">
-        <h2>Articles</h2>
-        <h6>December 3 2020</h6>
+        <div class="bodyelsHO_container_content_item">
+        <h2>Natural Hazards</h2>
+        <h6>December 10 2020</h6>
         <p>
-            An article is a written work published in a print or electronic medium. 
-            It may be for the purpose of propagating news, research results, academic analysis, 
-            or debate.  The main motive behind writing an article is that it should be published 
-            in either newspapers or magazines or journals so as to make some difference to the world.
-            It may be the topics of interest of the writer or it may be related to some current issues. 
-            The topic can either be serious or not-so-serious; Same goes for its tone and language......
+            Natural Hazard Natural hazards are potentially damaging natural 
+            phenomena that may occur within specific period of time in a given area that may cause danger to people, 
+            structures or economic assets and which may lead to a disaster.
         </p>
-        <a href="Article(r&w,HO).html">
+        <a href="Natural Hazards(ELS,HO).html">
         <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
-        <div class="bodyrNwHO_container_content_item">
-        <h2>Abstract Writing</h2>
-        <h6>December 20 2020</h6>
+        <div class="bodyelsHO_container_content_item">
+        <h2>Theory of Life</h2>
+        <h6>January 7 2021</h6>
         <p>
-            An abstract is a 150- to 250-word paragraph that provides readers with a 
-            quick overview of your essay or report and its organization. It should express 
-            your thesis (or central idea) and your key points; it should also suggest any implications or 
-            applications of the research you discuss in the paper.
+            How did life begin? There can hardly be a bigger question. 
+            For much of human history, almost everyone believed some version of "the gods did it". 
+            Any other explanation was inconceivable.
         </p>
-        <a href="Abstract Writing(r&w,HO).html">
+        <p>
+            Life on Earth began more than 3 billion years ago, evolving from the most 
+            basic of microbes into a dazzling array of complexity over time. 
+            But how did the first organisms on the only known home to life in the universe develop from the primordial soup?
+        </p>
+        <a href="#">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>      
         </div>
-        <div class="bodyPerdevHO_container_content_item">
-        <h2>Posistion Papers</h2>
-        <h6>January 7 2021</h6>
+        <div class="bodyelsHO_container_content_item">
+        <h2>Life</h2>
+        <h6>January 14 2021</h6>
         <p>
-            A position paper (sometimes position piece for brief items) is an essay that presents an arguable opinion about an issue
-            typically that of the author or some specified entity. Position papers are published in academia, in politics, in law and other domains. 
-            The goal of a position paper is to convince the audience that the opinion presented is valid and worth listening to. Ideas for position 
-            papers that one is considering need to be carefully examined when choosing a topic, developing an argument, and organizing the paper.
-            Position papers range from the simplest format of a letter to the editor, through to the most complex in the form of an academic position paper.
-            Position papers are also used by large organizations to make public the official beliefs and recommendations of the group.
+            our body is actually an ecosystem. It also means that you—for some definition of the word you—actually consist of both of the 
+            major types of cells: prokaryotic and eukaryotic.
         </p>
-        <a href="Posistion Paper(r&w,HO).html">
+        <p>
+            All cells fall into one of these two broad categories. Only the single-celled organisms of the domains Bacteria and Archaea are 
+            classified as prokaryotes—pro means before and kary means nucleus. Animals, plants, fungi, and protists are all eukaryotes—eu 
+            means true—and are made up of eukaryotic cells.
+        </p>
+        <a href="#">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
-        <div class="bodyPerdevHO_container_content_item">
-        <h2>Project Proposal</h2>
-        <h6>January 21 2021</h6>
+        <div class="bodyelsHO_container_content_item">
+        <h2>Human Body System</h2>
+        <h6>January 19 2021</h6>
         <p>
-            A project proposal is a document that describes a proposed project and its purpose, outcomes, and the steps that will be taken to complete the project. 
-            Not to be confused with a project contract, which is the formal agreement between two parties to complete a project, a project proposal’s purpose is to 
-            communicate how a company, team, or individual plan to approach a project.
+            Organ systems are groups of organs within the body that can be thought of as working together as a unit to carry out specific tasks or functions within the body. 
+            The human body is most commonly divided into eleven organ systems, the ones listed below.
         </p>
         <a href="Project Proposal(r&w,HO).html">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
-
         </div>
 </div>
 </body>
