--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <li><span></span></li>
         <li><a href="r&w_ho.html">Reading and Writing</a></li>
         <li><span></span></li>
-        <li><a href="#">Earth and Life Science</a></li>
+        <li><a href="ELS_ho.html">Earth and Life Science</a></li>
         </ul>
     </div>
     <!--dropdown-->
