--- a/ELS_ho.html
+++ b/ELS_ho.html
@@ -53,9 +53,9 @@
         <ul class="header_secondlink_list_handouts_container_list">
         <li><a href="perdev_ho.html">Personal Development</a></li>
         <li><span></span></li>
-        <li><a href="#">Reading and Writing</a></li>
+        <li><a href="r&w_ho.html">Reading and Writing</a></li>
         <li><span></span></li>
-        <li><a href="#">Earth and Life Science</a></li>
+        <li><a href="ELS_ho.html">Earth and Life Science</a></li>
         </ul>
     </div>
     <!--dropdown-->
@@ -159,7 +159,7 @@
             Organ systems are groups of organs within the body that can be thought of as working together as a unit to carry out specific tasks or functions within the body. 
             The human body is most commonly divided into eleven organ systems, the ones listed below.
         </p>
-        <a href="Project Proposal(r&w,HO).html">
+        <a href="Human System(ELS,HO).html">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
