--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="header_secondlink container">
 <ul class="header_secondlink_list">
 <li><a href="index.html">HOME</a></li>
-<li class="header_secondlink_list_handouts dropdown"><a href="#">HANDOUTS</a>
+<li class="header_secondlink_list_handouts dropdown"><a href="Handouts.html">HANDOUTS</a>
     <!--dropdown-->
     <div class="header_secondlink_list_handouts_container dropdown_animation">
         <span>Subjects</span>
