--- a/Natural Hazards(ELS,HO).html
+++ b/Natural Hazards(ELS,HO).html
@@ -60,20 +60,9 @@
     </div>
     <!--dropdown-->
 </li>
-<li class="header_secondlink_list_activity dropdown"><a href="#">ACTIVITIES</a>
+<li class="header_secondlink_list_activity dropdown"><a href="Activity.html">ACTIVITIES</a>
 
-<div class="header_secondlink_list_activity_container dropdown_animation">
-    <span>Subjects</span>
-    <!--dropdown-->
-    <ul class="header_secondlink_list_activity_container_list">
-    <li><a href="#">Personal Development</a></li>
-    <li><span></span></li>
-    <li><a href="#">Reading and Writing</a></li>
-    <li><span></span></li>
-    <li><a href="#">Earth and Life Science</a></li>
-    </ul>
-    <!--dropdown-->
-</div>
+
 </li>
 
 <li class="header_secondlink_list_exam dropdown"><a href="#">EXAM</a>
@@ -216,9 +205,13 @@
 <div class="bodynaturalhazards_activity_section containerwithsidebar" id="activity">
     <h1>Activity:</h1>
     <h5>In-class Exercises:</h5>
-    <p>List down at least three typhoons, two earthquakes that happened in The Philippines research what year, damages, 
-        and rehabilitation did the government gave.
-    </p>
+    <h6>Instruction:</h6>
+    <p>Answer the following Questions</p>
+    <ul>
+        <li>1. What to do when there is ,Typhoon? ,Storm Surge? Floods? What to prepare? Where to go?</li>
+        <li>2. What is Project NOAH?</li>
+    </ul>    
+  
    <a href="https://drive.google.com/file/d/1jpFPDciCltKqUKKxCG_iVPv1eUb-BPjW/view?usp=sharing">
    <button class="bodystress_activity_section_btn"> Submission </button>
     </a> 
