--- a/Posistion Paper(r&w,HO).html
+++ b/Posistion Paper(r&w,HO).html
@@ -60,20 +60,7 @@
     </div>
     <!--dropdown-->
 </li>
-<li class="header_secondlink_list_activity dropdown"><a href="#">ACTIVITIES</a>
-
-<div class="header_secondlink_list_activity_container dropdown_animation">
-    <span>Subjects</span>
-    <!--dropdown-->
-    <ul class="header_secondlink_list_activity_container_list">
-    <li><a href="#">Personal Development</a></li>
-    <li><span></span></li>
-    <li><a href="#">Reading and Writing</a></li>
-    <li><span></span></li>
-    <li><a href="#">Earth and Life Science</a></li>
-    </ul>
-    <!--dropdown-->
-</div>
+<li class="header_secondlink_list_activity dropdown"><a href="Activity.html">ACTIVITIES</a>
 </li>
 
 <li class="header_secondlink_list_exam dropdown"><a href="#">EXAM</a>
@@ -257,7 +244,6 @@ emphatically, the thesis can be modified in the course of the argument.
     <h1>Activity:</h1>
     <h5>Instruction:</h5>
    <p>Create an well made and consise Draft of a Posistion Papers </p>
-    </ol>
    <a href="https://drive.google.com/file/d/1d8ZCraLfJL7WL6RESNAFkygm6P_QVBsA/view?usp=sharing">
    <button class="bodystress_activity_section_btn"> Submission </button>
     </a>
