--- a/index.html
+++ b/index.html
@@ -59,20 +59,7 @@
     </div>
     <!--dropdown-->
 </li>
-<li class="header_secondlink_list_activity dropdown"><a href="#">ACTIVITIES</a>
-
-<div class="header_secondlink_list_activity_container dropdown_animation">
-    <span>Subjects</span>
-    <!--dropdown-->
-    <ul class="header_secondlink_list_activity_container_list">
-    <li><a href="#">Personal Development</a></li>
-    <li><span></span></li>
-    <li><a href="#">Reading and Writing</a></li>
-    <li><span></span></li>
-    <li><a href="#">Earth and Life Science</a></li>
-    </ul>
-    <!--dropdown-->
-</div>
+<li class="header_secondlink_list_activity dropdown"><a href="Activity.html">ACTIVITIES</a>
 </li>
 
 <li class="header_secondlink_list_exam dropdown"><a href="#">EXAM</a>
