--- a/Natural Hazards(ELS,HO).html
+++ b/Natural Hazards(ELS,HO).html
@@ -65,19 +65,7 @@
 
 </li>
 
-<li class="header_secondlink_list_exam dropdown"><a href="#">EXAM</a>
-   <!--dropdown--> 
-    <div class="header_secondlink_list_exam_container dropdown_animation">
-        <span>Subjects</span>
-        <ul class="header_secondlink_list_exam_container_list">
-        <li><a href="#">Personal Development</a></li>
-        <li><span></span></li>
-        <li><a href="#">Reading and Writing</a></li>
-        <li><span></span></li>
-        <li><a href="#">Earth and Life Science</a></li>
-        </ul>
-    </div>
-    <!--dropdown-->
+<li class="header_secondlink_list_exam dropdown"><a href="Exam.html">EXAM</a>
 </li>
     
 </li>
