--- a/index.html
+++ b/index.html
@@ -73,9 +73,22 @@
 
 <body class="body">
 <div class="body_box">
-      <div class="body_box_frames center">
-        <img src="Assets/Frame 3.png" Class="body_box_frames_imgs center" alt="Frame 1" id="Frame 1">
-     </div>
+      <div class="body_box_frames">
+        <img src="Assets/Frame 1.png" class="body_box_frames_imgs3" alt="Frame3" id="frame3">
+        <img src="Assets/Frame 2.png" class="body_box_frames_imgs2" alt="Frame2" id="frame2">
+        <img src="Assets/Frame 3.png" class="body_box_frames_imgs1" alt="Frame1" id="frame1">
+        <img src="Assets/Frame 4.png" class="body_box_frames_imgs4" alt="Frame4" id="frame4">
+        <img src="Assets/Frame 5.png" class="body_box_frames_imgs5" alt="Frame5" id="frame5">
+      </div>
+      <div class="body_box_text">
+        <h1 id="Firstname">Rogelio Gio</h1>
+        <h1 id="Surname">Talingdan</h1>
+        <h1 id="Firstname1">Rogelio Gio</h1>
+        <h1 id="Surname1">Talingdan</h1>
+      </div>
+      <div class="body_box_HomepageLogo">
+        <img src="Assets/homepage.png" alt="">
+      </div>
 </div>
 </body>
 
